--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Punching Bag</title>
-  <link href="style.css" rel="stylesheet" type="text/css" /> <!-- Optional: your CSS -->
+  <link href="style0.css" rel="stylesheet" type="text/css" />
   <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
 </head>
 
